tests/trybuild/traced_error_with_non_error_does_not_implement_error.stderr
error[E0277]: the trait bound `{integer}: SendSyncError` is not satisfied
 --> tests/trybuild/traced_error_with_non_error_does_not_implement_error.rs:5:80
  |
5 |     let x: eros::ErrorUnion<(u16, std::io::Error)> = eros::ErrorUnion::error(1);
  |                                                       ------------------------ ^ the trait `std::error::Error` is not implemented for `{integer}`
  |                                                       |
  |                                                       required by a bound introduced by this call
  |
  = note: required for `{integer}` to implement `SendSyncError`
note: required by a bound in `ErrorUnion::<E>::error`
 --> src/error_union.rs
  |
  |     pub fn error<T, Index>(t: T) -> ErrorUnion<E>
  |            ----- required by a bound in this associated function
  |     where
  |         T: SendSyncError,
  |            ^^^^^^^^^^^^^ required by this bound in `ErrorUnion::<E>::error`

error[E0277]: the trait bound `&ErrorUnion<(u16, std::io::Error)>: std::error::Error` is not satisfied
 --> tests/trybuild/traced_error_with_non_error_does_not_implement_error.rs:6:14
  |
6 |     is_error(&&x);
  |     -------- ^^^ the trait `std::error::Error` is not implemented for `&ErrorUnion<(u16, std::io::Error)>`
  |     |
  |     required by a bound introduced by this call
  |
  = help: the trait `std::error::Error` is implemented for `&ErrorUnion<E>`
note: required by a bound in `is_error`
 --> tests/trybuild/traced_error_with_non_error_does_not_implement_error.rs:2:16
  |
2 | fn is_error<T: core::error::Error>(_: &T) {}
  |                ^^^^^^^^^^^^^^^^^^ required by this bound in `is_error`
